deploy/overlays/rollouts/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: gobg
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: gobg
  template:
    metadata:
      labels:
        app: gobg
    spec:
      containers:
        - name: gobg
          image: christianh814/gobg:2f4af9 #f3265a
          imagePullPolicy: IfNotPresent
  strategy:
    blueGreen:
      activeService: gobg-active
      previewService: gobg-preview
      autoPromotionSeconds: 15
