deploy/overlays/rollouts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: gobg-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: gobg.aks.az.chx.cloud
    http:
      paths:
      - backend:
          service:
            name: gobg
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - gobg.aks.az.chx.cloud
    secretName: gobg-ingress-tls
